--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -88,6 +88,8 @@ th
 {
 	border: 1px solid #ccc;
 	border-collapse: collapse;
+		padding: .1em .5em .1em .5em;
+		text-align: left;
 }
 
 td
@@ -95,6 +97,7 @@ td
 	border: 1px solid #ccc;
 	border-collapse: collapse;
 	padding: .1em .5em .1em .5em;
+	text-align: left;
 }
 
 ol, ul
